--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Roy Chuag/张锐"
-  pronouns         : "her"  
+  pronouns         : "he"  
   bio              : "Bioinformation analysis"
   location         : "China"
   employer         : "Hainan Tropical Ocean University"
