--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   bio              : "Bioinformation analysis"
   location         : "China"
   employer         : "Hainan Tropical Ocean University"
-  uri              : "https://github.com/vigass"
+  github           : "https://github.com/vigass"
   email            : "1636770513@qq.com" 
 
   # Academic websites
