--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   bio              : "Bioinformation analysis"
   location         : "China"
   employer         : "Hainan Tropical Ocean University"
-  #github           : "https://github.com/vigass"
+  Notion           : "https://www.notion.so/RNA-seq-0ab2e58a344e41f5bd9591f250211234"
   email            : "1636770513@qq.com" 
 
   # Academic websites
